--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,7 @@
 
-<html   xmlns:th = "http://www.thymeleaf.org" xmlns:layout = "http://ultraq.net.nz/thymeleaf/layout" layout:decorator = "layout/main2.html" >
+<html   xmlns:th = "http://www.thymeleaf.org" xmlns:layout = "http://ultraq.net.nz/thymeleaf/layout" layout:decorate = "layout/loginLayout.html" >
 
-<div layout:fragment="site_content"   >
+<div layout:fragment="site_content" >
 
     <div class="jumbotron shadow  text-center mt-5" style="width: 300px; margin: 0 auto;  background-color: #b4de62" >
         <div class="alert alert-primary" role="alert" th:text="${success}" th:if="${success}"></div>
