SR-6: Добавил КРУД для ролей и юзеров в админку

--- a/admin/src/main/resources/templates/layout/mainLayout.html
+++ b/admin/src/main/resources/templates/layout/mainLayout.html
@@ -115,7 +115,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light shadow " style="background-color: #079915; color: white">
-        <a class="navbar-brand ml-5" href="/" style="color: white"><img src="https://avatars.mds.yandex.net/get-adv/135342/2a0000016c909ced8d6107c4dab9897eea51/orig" style="width: 40px;height: 40px"> <b> E-SHOP</b></a>
+        <a class="navbar-brand ml-5" href="/" style="color: white"><img src="https://avatars.mds.yandex.net/get-adv/135342/2a0000016c909ced8d6107c4dab9897eea51/orig" style="width: 40px;height: 40px"> <b> ShaRead Admin Panel</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -182,7 +182,7 @@
 
 </div>
         <div class="container-fluid text-center mt-5 "  style="background-color: #373434; color: white;height: 200px; padding-top: 100px;" >
-            Copyright(C) E-SHOP.KZ
+            Copyright(C) Sharead.KZ
         </div>
 
 
