--- a/admin/src/main/resources/templates/layout/loginLayout.html
+++ b/admin/src/main/resources/templates/layout/loginLayout.html
@@ -109,7 +109,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light  " style="background-color: #079915; color: white">
-        <a class="navbar-brand ml-5" href="/" style="color: white"><img src="https://avatars.mds.yandex.net/get-adv/135342/2a0000016c909ced8d6107c4dab9897eea51/orig" style="width: 40px;height: 40px"><b> E-SHOP</b></a>
+        <a class="navbar-brand ml-5" href="/" style="color: white"><img src="https://avatars.mds.yandex.net/get-adv/135342/2a0000016c909ced8d6107c4dab9897eea51/orig" style="width: 40px;height: 40px"><b> ShaRead Admin Panel</b></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -125,15 +125,11 @@
                 <select name="lng" class="form-control mr-2" onchange="this.form.submit()"><option value="en" th:selected="${#request.getParameter('lng') == 'en'}">ENG</option><option value="ru" th:selected="${#request.getParameter('lng') == 'ru'}">RUS</option><option value="kz" th:selected="${#request.getParameter('lng') == 'kz'}">KAZ</option></select>
 
             </form>
-            <a href="/login" class="btn btn-outline-warning my-2 my-sm-0" style="color: white" sec:authorize="isAnonymous()" th:text="#{label.login}"></a>
-            <a href="/register" class="btn btn-outline-warning my-2 my-sm-0" style="color: white" sec:authorize="isAnonymous()" th:text="#{label.reg}"></a>
 
-            <a href="/profile" class="btn btn-outline-warning my-2 my-sm-0" style="color: white" sec:authorize="isAuthenticated()" th:text="${currentUser.getFullName()}"></a>
             <a href="JavaScript:void(0)" onclick="document.getElementById('logoutForm').submit()" class="btn btn-outline-warning my-2 my-sm-0" style="color: white" sec:authorize="isAuthenticated()" th:text="#{label.logout}"></a>
-            <a th:href="@{'/admin'}" class="btn btn-outline-warning"  sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_MODERATOR')"  style="text-decoration: none; color:white;" th:text="#{label.admin}">
 
             </a>
-            <a href="/basket" class="btn btn-outline-info my-2 my-sm-0" style="color: white"  th:text="#{label.basket}"></a>
+
         </div>
     </nav>
     <form th:action="@{'/logout'}" method="post" id="logoutForm" sec:authorize="isAuthenticated()"></form>
