SR-7: Заготовка под Library

--- a/site/src/main/resources/templates/library.html
+++ b/site/src/main/resources/templates/library.html
@@ -3,12 +3,12 @@
 
 <div layout:fragment="site_content" >
 
+    <button class="btn btn-dark"  data-toggle="modal" data-target="#addBook" >+ ADD BOOK +</button>
 
 
-exchanges...
+library...
 
 </div>
-
 
 
 
