--- a/site/src/main/resources/templates/profile.html
+++ b/site/src/main/resources/templates/profile.html
@@ -7,7 +7,7 @@
     <div class="container-fluid bg-success  mb-2 text-center p-5"style="color: white; border-radius: 50px">
         <h3><span  th:text="#{label.welcome}"></span>  <span th:text="${currentUser.getFullName()}"></span></h3>
 
-        <img th:src="@{'/viewphoto/'+${currentUser.userAvatar}}" class="border border-warning" style="width: 60%;height: 460px; border-radius:999em">
+        <img th:src="@{'/viewphoto/'+${currentUser.userAvatar}}" class="border border-warning" style="width: 60%;height: 60%; border-radius:999em">
     </div>
     <div class="alert alert-primary" role="alert" th:text="${successA}" th:if="${successA}"></div>
     <div class="alert alert-danger" role="alert" th:text="${errorA}" th:if="${errorA}"></div>
