--- a/admin/src/main/resources/templates/admin.html
+++ b/admin/src/main/resources/templates/admin.html
@@ -4,30 +4,23 @@
 
 
     <div class="container mt-3">
-        <button class="btn btn-info ml-4"  data-toggle="modal" data-target="#addItem" >+ ADD NEW ITEM</button>
-        <button class="btn btn-success"  data-toggle="modal" data-target="#addBrand" >+ ADD NEW BRAND</button>
-        <button class="btn btn-warning"  data-toggle="modal" data-target="#addCountry" >+ ADD NEW COUNTRY</button>
+        <button class="btn btn-info ml-4"  data-toggle="modal" data-target="#addBook" >+ ADD NEW BOOK</button>
+        <button class="btn btn-success"  data-toggle="modal" data-target="#addAuthor" >+ ADD NEW AUTHOR</button>
+        <button class="btn btn-warning"  data-toggle="modal" data-target="#addGenre" >+ ADD NEW GENRE</button>
         <button class="btn btn-secondary"  data-toggle="modal" data-target="#addCategory" >+ ADD NEW CATEGORY</button>
         <button class="btn btn-dark"  data-toggle="modal" data-target="#addUser" >+ ADD NEW USER</button>
         <button class="btn btn-danger"  data-toggle="modal" data-target="#addRole" >+ ADD NEW ROLE</button>
-        <div class="modal fade" id="addItem" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+        <div class="modal fade" id="addBook" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-body">
-                    <form th:action="@{/additem}" method="post">
+                    <form th:action="@{/addBook}" method="post">
                         <div class="form-group">
 
-                            Name <input type="text" class="form-control" name="name">
-                            Desc <input type="text" class="form-control" name="desc">
-                            Price <input type="text" class="form-control" name="price">
-
-                            Stars <input type="text" class="form-control" name="stars">
-                            SmallUrl <input type="text" class="form-control" name="s_url">
-
-                            LargeUrl <input type="text" class="form-control" name="l_url">
-                            Brand
-                            <select class="form-control" name="brand_id">
-                                <option th:each="br : ${brands}" th:text="${br.name}" th:value="${br.id}"></option>
+                            Title <input type="text" class="form-control" name="title">
+                            Author
+                            <select class="form-control" name="author_id">
+                                <option th:each="author : ${authors}" th:text="${author.getName()}" th:value="${author.getId()}"></option>
 
                             </select>
 
@@ -40,17 +33,14 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="addCategory" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addGenre" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
-                <form th:action="@{/addcat}" method="post">
+                <form th:action="@{/addGenre}" method="post">
                     <div class="form-group">
 
                         Name <input type="text" class="form-control" name="name">
-
-                        Logo Url
-                        <input type="text" class="form-control" name="url">
 
                     </div>
                     <div class="modal-footer">
@@ -79,6 +69,23 @@
                 </form>
             </div>
         </div></div>
+    </div>
+
+    <div class="modal fade" id="addAuthor" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <form th:action="@{/addAuthor}" method="post">
+                        <div class="form-group">
+                            Name <input type="text" class="form-control" name="name">
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary" style="background-color: rgba(46,86,80,1);">ADD</button>
+                        </div>
+                    </form>
+                </div>
+            </div></div>
     </div>
 
     <div class="modal fade" id="edUser" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
@@ -168,21 +175,14 @@
         </div>
     </div>
 
-    <div class="modal fade" id="edBrand" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="edAuthor" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
-                <form th:action="@{/edbr}" method="post">
+                <form th:action="@{/editAuthor}" method="post">
                     <div class="form-group">
-                        <input type="hidden" name="id" id="id_br">
-                        Name <input id="name_br" type="text" class="form-control" name="name">
-
-                        Country
-                        <select id="ctn_br" class="form-control" name="country_id">
-                            <option th:each="ctn : ${countries}" th:text="${ctn.name}" th:value="${ctn.id}"></option>
-
-                        </select>
-
+                        <input type="hidden" name="id" id="id_author">
+                        Name <input id="name_author" type="text" class="form-control" name="name">
                     </div>
                     <div class="modal-footer">
                         <button type="submit" name="del" value="1" class="btn btn-danger" >DELETE</button>
@@ -213,16 +213,14 @@
         </div>
     </div>
 
-    <div class="modal fade" id="edCountry" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal fade" id="edGenre" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
-                <form th:action="@{/edctn}" method="post">
+                <form th:action="@{/editGenre}" method="post">
                     <div class="form-group">
-                        <input type="hidden" name="id" id="id_ctn">
-                        Name <input id="name_ctn" type="text" class="form-control" name="name">
-                        Code <input id="code_ctn"  type="text" class="form-control" name="code">
-
+                        <input type="hidden" name="id" id="id_genre">
+                        Name <input id="name_genre" type="text" class="form-control" name="name">
 
                     </div>
                     <div class="modal-footer">
@@ -240,32 +238,25 @@
 
 
                 <div class="jumbotron bg-success  text-center" style="color: white; font-size: 40px">
-                    ITEMS
+                    BOOKS
                 </div>
                 <table class="table table-striped">
                     <thead>
                     <tr>
                         <th>ID</th>
-                        <th>NAME</th>
-                        <th>DESCRIPTION</th>
-                        <th>PRICE</th>
-                        <th>RATING</th>
+                        <th>TITLE</th>
+                        <th>AUTHOR</th>
+                        <th>EDIT</th>
 
-                        <th>BRAND</th>
-                        <th>DETAILS</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="i : ${items}">
+                    <tr th:each="i : ${books}">
                         <td th:text="${i.getId()}"></td>
-                        <td th:text="${i.getName()}"></td>
-                        <td th:text="${i.getDescription()}"></td>
-                        <td th:text="${i.getPrice()}"></td>
-                        <td th:text="${i.getStars()}"></td>
-
-                        <td th:text="${i.getBrand()!=null?i.getBrand().name:'------'}"></td>
+                        <td th:text="${i.getTitle()}"></td>
+                        <td th:text="${i.getAuthor()!=null?i.getAuthor().name:'------'}"></td>
                         <td>
-                            <a th:href="@{'/item_details/' + ${i.getId()}}" class="btn btn-info">
+                            <a th:href="@{'/book_details/' + ${i.getId()}}" class="btn btn-info">
 
                                 EDIT
 
@@ -278,24 +269,22 @@
 
 
                 <div class="jumbotron bg-success  text-center" style="color: white; font-size: 40px">
-                    COUNTRIES
+                    GENRES
                 </div>
                 <table class="table table-striped">
                     <thead>
                     <tr>
                         <th>ID</th>
                         <th>NAME</th>
-                        <th>CODE</th>
                         <th>EDIT</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="i : ${countries}">
+                    <tr th:each="i : ${genres}">
                         <td th:text="${i.getId()}"></td>
                         <td th:text="${i.getName()}"></td>
-                        <td th:text="${i.getCode()}"></td>
                         <td  >
-                            <button th:onclick="edit([[${i.getName()}]]); edit1([[${i.getCode()}]]); editidctn([[${i.getId()}]]);   " data-toggle="modal" class="btn btn-info" data-target="#edCountry" >
+                            <button th:onclick="edit([[${i.getName()}]]); editidctn([[${i.getId()}]]);   " data-toggle="modal" class="btn btn-info" data-target="#edGenre" >
 
 EDIT
 
@@ -305,24 +294,22 @@ EDIT
                     </tbody>
                 </table>
                 <div class="jumbotron bg-success  text-center" style="color: white; font-size: 40px">
-                    BRANDS
+                    AUTHORS
                 </div>
                 <table class="table table-striped">
                     <thead>
                     <tr>
                         <th>ID</th>
                         <th>NAME</th>
-                        <th>COUNTRY</th>
                         <th>EDIT</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="i : ${brands}">
+                    <tr th:each="i : ${authors}">
                         <td th:text="${i.getId()}"></td>
                         <td th:text="${i.getName()}"></td>
-                        <td th:text="${i.getCountry()!=null?i.getCountry().name:'------'}"></td>
                         <td  >
-                            <button th:onclick="edit2([[${i.getName()}]]); edit3([[${i.getCountry().getId()}]]); editidbr([[${i.getId()}]]);  " data-toggle="modal" class="btn btn-info" data-target="#edBrand" >
+                            <button th:onclick="edit2([[${i.getName()}]]);  editidbr([[${i.getId()}]]);  " data-toggle="modal" class="btn btn-info" data-target="#edAuthor" >
 
                                 EDIT
 
