--- a/admin/src/main/resources/templates/layout/loginLayout.html
+++ b/admin/src/main/resources/templates/layout/loginLayout.html
@@ -15,21 +15,17 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script>
+
+
             function edit(o) {
                 console.log(o);
-                document.getElementById("name_ctn").value = o;
-
-
-            }
-            function edit1(o) {
-                console.log(o);
-                document.getElementById("code_ctn").value = o;
+                document.getElementById("name_genre").value = o;
 
 
             }
             function editidctn(o) {
                 console.log(o);
-                document.getElementById("id_ctn").value = o;
+                document.getElementById("id_genre").value = o;
 
 
             }
@@ -37,22 +33,26 @@
 
             function edit2(o) {
                 console.log(o);
-                document.getElementById("name_br").value = o;
+                document.getElementById("name_author").value = o;
 
 
             }
+
+            function editidbr(o) {
+                console.log(o);
+                document.getElementById("id_author").value = o;
+
+
+            }
+
+
             function edit3(o) {
                 console.log(o);
                 document.getElementById("ctn_br").value = o;
 
 
             }
-            function editidbr(o) {
-                console.log(o);
-                document.getElementById("id_br").value = o;
 
-
-            }
 
             function editcat1(o) {
                 console.log(o);
@@ -109,7 +109,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light  " style="background-color: #079915; color: white">
-        <a class="navbar-brand ml-5" href="/" style="color: white"><img src="https://avatars.mds.yandex.net/get-adv/135342/2a0000016c909ced8d6107c4dab9897eea51/orig" style="width: 40px;height: 40px"><b> ShaRead Admin Panel</b></a>
+        <a class="navbar-brand ml-5" href="/admin" style="color: white"><img src="https://avatars.mds.yandex.net/get-adv/135342/2a0000016c909ced8d6107c4dab9897eea51/orig" style="width: 40px;height: 40px"><b> ShaRead Admin Panel</b></a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
