--- a/site/src/main/resources/templates/exchanges.html
+++ b/site/src/main/resources/templates/exchanges.html
@@ -3,8 +3,9 @@
 
 <div layout:fragment="site_content" class="container-fluid libcontainer m-0" >
     <div class="text-center">
-    <button class="btn btn-dark m-3"  data-toggle="modal" data-target="#addBook" >+ ADD BOOK +</button>
+        <a href="/createExchange" class="btn btn-danger">Create Exchange</a>
     </div>
+
 
 
         <div class="jumbotron row m-0" >
