SR-16: Exchanges добавление сущности

--- a/site/src/main/resources/templates/layout/loginLayout.html
+++ b/site/src/main/resources/templates/layout/loginLayout.html
@@ -58,7 +58,7 @@
         </div>
     </nav>
     <form th:action="@{'/logout'}" method="post" id="logoutForm" sec:authorize="isAuthenticated()"></form>
-    <div class="row m-0">
+    <div class="m-0 text-center container-fluid" style="margin: 0 auto">
 
     <div layout:fragment="site_content" class="  container" ></div>
 
