--- a/site/src/main/resources/templates/createExchange.html
+++ b/site/src/main/resources/templates/createExchange.html
@@ -1,114 +1,78 @@
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://ultraq.net.nz/thymeleaf/layout"
+      xmlns="http://www.w3.org/1999/html" layout:decorate="layout/loginLayout.html">
 
-<html   xmlns:th = "http://www.thymeleaf.org" xmlns:layout = "http://ultraq.net.nz/thymeleaf/layout" layout:decorate = "layout/loginLayout.html" >
+<div layout:fragment="site_content" class="libcontainer " >
+    <div class="text-center" style="margin: 0 auto">
 
-<div layout:fragment="site_content" class="container-fluid libcontainer m-0" >
-    <div class="text-center">
-    <button class="btn btn-dark m-3"  data-toggle="modal" data-target="#addBook" >+ ADD BOOK +</button>
-    </div>
+        <form method="post" th:action="@{'/submitExchange'}">
+            <button class="btn btn-dark m-3"   >+ SUBMIT +</button> <br>
+            <textarea type="text" name="comment"></textarea>
 
 
-        <div class="jumbotron row m-0" >
 
-            <div class="jumbotron row">
-                <div th:each="book : ${currentUserBooks}" class="col-2">
-                    <div class="card cardlib">
-                        <img th:src="@{'/viewuserbook/'+${book.getCover()}}" class="card-img-top libimg" alt="...">
-                        <div class="card-body ">
-                            <h5 class="card-title m-0" th:text="${book.getBook().getTitle()}">Harry Potter и принц персии</h5>
-                            <p class="card-text m-0" th:text="${book.getBook().getAuthor().getName()}">Some quick example </p>
-                            <form th:action="@{/removebookfromexchange}" method="POST">
-                                <input type="hidden" th:value="${book.getId()}" name="id">
-                                <input type="hidden" value="userBook" name="type">
-                                <button type="submit" href="#" class="btn btn-danger m-0">Remove</button>
-                            </form>
+        </form>
+
+        <div class="   m-0 " style="margin: 0 auto" >
+
+            <div class=" row  m-0">
+
+                <div class="col-5" >
+                    <div class="row  m-0" style="background-color: #b4de62">
+                        <div th:each="book : ${currentUserBooks}" class="col-4">
+                            <a th:href="@{'/removebookfromexchange?id='+${book.getId()} + '&type=userBook'}">
+                            <img th:src="@{'/viewuserbook/'+${book.getCover()}}"
+                                 class="card-img-top eximg" alt="..."> </a>
+                            <div class="card-body ">
+
+                            </div>
+
                         </div>
-                    </div>
-                </div>
-            </div>
-        <div class="col-2" >
-            <img src="https://icon-library.com/images/swap-icon-png/swap-icon-png-0.jpg" class="swap"/>
-        </div>
-            <div class="jumbotron row">
 
-                <div th:each="genre : ${currentGenres}" class="col-2">
-                    <div class="card cardlib">
-                        <img th:src="@{'/viewbookex/'}" class="card-img-top libimg" alt="...">
-                        <div class="card-body ">
-                            <h5 class="card-title m-0" th:text="${genre.getName()}">Harry Potter и принц персии</h5>
 
-                            <form th:action="@{/removebookfromexchange}" method="POST">
-                                <input type="hidden" th:value="${genre.getId()}" name="id">
-                                <input type="hidden" value="genre" name="type">
-                                <button type="submit" href="#" class="btn btn-danger m-0">Remove</button>
-                            </form>
-                        </div>
                     </div>
+
+
                 </div>
 
-                <div th:each="author : ${currentAuthors}" class="col-2">
-                    <div class="card cardlib">
-                        <img th:src="@{'/viewbookex/'}" class="card-img-top libimg" alt="...">
-                        <div class="card-body ">
-                            <h5 class="card-title m-0" th:text="${author.getName()}">Harry Potter и принц персии</h5>
-
-                            <form th:action="@{/removebookfromexchange}" method="POST">
-                                <input type="hidden" th:value="${author.getId()}" name="id">
-                                <input type="hidden" value="author" name="type">
-                                <button type="submit" href="#" class="btn btn-danger m-0">Remove</button>
-                            </form>
-                        </div>
-                    </div>
+                <div class="col-2" >
+                    <img src="https://icon-library.com/images/swap-icon-png/swap-icon-png-0.jpg" class="swap"/>
                 </div>
 
-                <div th:each="book : ${currentBooks}" class="col-2">
-                    <div class="card cardlib">
-                        <img th:src="@{'/viewbookex/'+${book.getCover()}}" class="card-img-top libimg" alt="...">
-                        <div class="card-body ">
-                            <h5 class="card-title m-0" th:text="${book.getTitle()}">Harry Potter и принц персии</h5>
-                            <p class="card-text m-0" th:text="${book.getAuthor().getName()}">Some quick example </p>
-                            <form th:action="@{/removebookfromexchange}" method="POST">
-                                <input type="hidden" th:value="${book.getId()}" name="id">
-                                <input type="hidden" value="book" name="type">
-                                <button type="submit" href="#" class="btn btn-danger m-0">Remove</button>
-                            </form>
+                <div class="col-5" >
+                    <div class="row  m-0" style="background-color: #b4de62">
+                        <div th:each="book : ${currentBooks}" class="col-4">
+                            <a th:href="@{'/removebookfromexchange?id='+${book.getId()} + '&type=book'}">
+                            <img th:src="@{'/viewbookex/'+${book.getCover()}}"
+                                 class="card-img-top eximg" alt="...">
+                            </a>
+                            <div class="card-body ">
+
+                            </div>
+
                         </div>
+
                     </div>
+
+
                 </div>
-
-
-
-
 
             </div>
-        </div>
 
-    <div class="jumbotron row">
-    <div th:each="book : ${userBooks}" class="col-2">
-        <div class="card cardlib">
-            <img th:src="@{'/viewuserbook/'+${book.getCover()}}" class="card-img-top libimg" alt="...">
-            <div class="card-body ">
-                <h5 class="card-title m-0" th:text="${book.getBook().getTitle()}">Harry Potter и принц персии</h5>
-                <p class="card-text m-0" th:text="${book.getBook().getAuthor().getName()}">Some quick example </p>
-                <form th:action="@{/addbooktoexchange}" method="POST">
-                    <input type="hidden" th:value="${book.getId()}" name="id">
-                    <input type="hidden" value="userBook" name="type">
-                    <button type="submit" href="#" class="btn btn-success m-0">Add</button>
-                </form>
-            </div>
+
+
+
         </div>
     </div>
-    </div>
-
-    <div class="jumbotron row">
-        <div th:each="author : ${authors}" class="col-2">
+    <div class="jumbotron row m-0">
+        <div th:each="book : ${userBooks}" class="col-2">
             <div class="card cardlib">
-                <img th:src="@{'/viewbookex/'}" class="card-img-top libimg" alt="...">
+                <img th:src="@{'/viewuserbook/'+${book.getCover()}}" class="card-img-top libimg" alt="...">
                 <div class="card-body ">
-                    <h5 class="card-title m-0" th:text="${author.getName()}">Harry Potter и принц персии</h5>
-
+                    <h5 class="card-title m-0" th:text="${book.getBook().getTitle()}">Harry Potter и принц персии</h5>
+                    <p class="card-text m-0" th:text="${book.getBook().getAuthor().getName()}">Some quick example </p>
                     <form th:action="@{/addbooktoexchange}" method="POST">
-                        <input type="hidden" th:value="${author.getId()}" name="id">
-                        <input type="hidden" value="author" name="type">
+                        <input type="hidden" th:value="${book.getId()}" name="id">
+                        <input type="hidden" value="userBook" name="type">
                         <button type="submit" href="#" class="btn btn-success m-0">Add</button>
                     </form>
                 </div>
@@ -116,24 +80,9 @@
         </div>
     </div>
 
-    <div class="jumbotron row">
-        <div th:each="genre : ${genres}" class="col-2">
-            <div class="card cardlib">
-                <img th:src="@{'/viewbookex/'}" class="card-img-top libimg" alt="...">
-                <div class="card-body ">
-                    <h5 class="card-title m-0" th:text="${genre.getName()}">Harry Potter и принц персии</h5>
 
-                    <form th:action="@{/addbooktoexchange}" method="POST">
-                        <input type="hidden" th:value="${genre.getId()}" name="id">
-                        <input type="hidden" value="genre" name="type">
-                        <button type="submit" href="#" class="btn btn-success m-0">Add</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="jumbotron row">
+    <div class="container-fluid row m-0" style="background-color: beige">
         <div th:each="book : ${books}" class="col-2">
             <div class="card cardlib">
                 <img th:src="@{'/viewbookex/'+${book.getCover()}}" class="card-img-top libimg" alt="...">
