--- a/site/src/main/resources/static/css/main.css
+++ b/site/src/main/resources/static/css/main.css
@@ -4,7 +4,12 @@
     min-height: 14em;
     min-width: 10em;
 }
-
+.eximg{
+    max-height: 9em;
+    max-width: 7em;
+    min-height: 10em;
+    min-width: 6em;
+}
 .cardlib{
     margin-left: auto;
     margin-right: auto;
@@ -19,6 +24,6 @@
 }
 
 .swap{
-    width: 10em;
-    height: 10em;
+    width: 7em;
+    height: 6em;
  }
