--- a/site/src/main/resources/templates/createExchange.html
+++ b/site/src/main/resources/templates/createExchange.html
@@ -58,10 +58,11 @@
 
             </div>
 
-
-
-
         </div>
+
+    </div>
+    <div class="text-center" style="margin: 0 auto">
+        <h3> Your books:</h3>
     </div>
     <div class="jumbotron row m-0">
         <div th:each="book : ${userBooks}" class="col-2">
@@ -81,7 +82,9 @@
     </div>
 
 
-
+    <div class="text-center" style="margin: 0 auto">
+        <h3> Pick books that you want:</h3>
+    </div>
     <div class="container-fluid row m-0" style="background-color: beige">
         <div th:each="book : ${books}" class="col-2">
             <div class="card cardlib">
