--- a/site/src/main/resources/static/css/main.css
+++ b/site/src/main/resources/static/css/main.css
@@ -1,7 +1,7 @@
 .libimg{
     max-height: 36em;
     max-width: 25em;
-    min-height: 14em;
+    min-height: 32em;
     min-width: 10em;
 }
 .eximg{
@@ -35,7 +35,7 @@ p,*{
 }
 
 :root{
-    --primary_col: #303134;
+    --primary_col: rgb(79, 82, 87);
     --secondary_col: #202124;
 }
 
@@ -98,8 +98,8 @@ body{
 }
 
 .block_exchange_book img{
-    width: 150px;
-    height: 200px;
+    width: 100px;
+    height: 144px;
     object-position: center;
     object-fit: cover;
     margin-bottom: 5px;
@@ -120,6 +120,10 @@ body{
     border-radius: 50%;
 }
 
+a{
+    color: white !important;
+    text-decoration: none !important;
+}
 /* Media Queries - Adaptive Layouts */
 
 @media (max-width:1200px){
@@ -140,8 +144,8 @@ body{
         padding: 5px;
     }
     .block_exchange_book img{
-        width: 120px;
-        height: 180px;
+        width: 90px;
+        height: 130px;
     }
     .user img{
         width: 100px;
@@ -163,7 +167,7 @@ body{
     }
     .block_exchange_book img{
         width: 100%;
-        height: 130px;
+        height: 120px;
     }
     .user img{
         width: 70px;
