--- a/site/src/main/resources/templates/createExchange.html
+++ b/site/src/main/resources/templates/createExchange.html
@@ -2,7 +2,7 @@
       xmlns="http://www.w3.org/1999/html" layout:decorate="layout/loginLayout.html">
 
 <div layout:fragment="site_content" class="libcontainer " >
-    <div class="text-center" style="margin: 0 auto">
+    <div class="text-center exchange mt-4" style="margin: 0 auto">
 
         <form method="post" th:action="@{'/submitExchange'}">
             <button class="btn btn-dark m-3"   >+ SUBMIT +</button> <br>
@@ -17,17 +17,23 @@
             <div class=" row  m-0">
 
                 <div class="col-5" >
-                    <div class="row  m-0" style="background-color: #b4de62">
-                        <div th:each="book : ${currentUserBooks}" class="col-4">
+                    <div class="row  m-0" style="">
+<!--                        <div th:each="book : ${currentUserBooks}" class="col-4">-->
+<!--                            <a th:href="@{'/removebookfromexchange?id='+${book.getId()} + '&type=userBook'}">-->
+<!--                            <img th:src="@{'/viewuserbook/'+${book.getCover()}}"-->
+<!--                                 class="card-img-top eximg" alt="..."> </a>-->
+<!--                            <div class="card-body ">-->
+
+<!--                            </div>-->
+
+<!--                        </div>-->
+                        <div th:each="book : ${currentUserBooks}" class="block_exchange_book book1 col-4">
                             <a th:href="@{'/removebookfromexchange?id='+${book.getId()} + '&type=userBook'}">
-                            <img th:src="@{'/viewuserbook/'+${book.getCover()}}"
-                                 class="card-img-top eximg" alt="..."> </a>
-                            <div class="card-body ">
-
-                            </div>
-
+                            <img th:src="@{'/viewuserbook/'+${book.getCover()}}" alt="bookImg">
+                            <p th:text="${book.getBook().getTitle()}">Три товарища</p>
+                            <p th:text="${book.getBook().getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
+                            </a>
                         </div>
-
 
                     </div>
 
@@ -39,17 +45,25 @@
                 </div>
 
                 <div class="col-5" >
-                    <div class="row  m-0" style="background-color: #b4de62">
-                        <div th:each="book : ${currentBooks}" class="col-4">
+                    <div class="row  m-0" style="">
+<!--                        <div th:each="book : ${currentBooks}" class="col-4">-->
+<!--                            <a th:href="@{'/removebookfromexchange?id='+${book.getId()} + '&type=book'}">-->
+<!--                            <img th:src="@{'/viewbookex/'+${book.getCover()}}"-->
+<!--                                 class="card-img-top eximg" alt="...">-->
+<!--                            </a>-->
+<!--                            <div class="card-body ">-->
+
+<!--                            </div>-->
+
+<!--                        </div>-->
+                        <div th:each="book : ${currentBooks}" class="block_exchange_book book1 col-4">
                             <a th:href="@{'/removebookfromexchange?id='+${book.getId()} + '&type=book'}">
-                            <img th:src="@{'/viewbookex/'+${book.getCover()}}"
-                                 class="card-img-top eximg" alt="...">
+                            <img th:src="@{'/viewbookex/'+${book.getCover()}}" alt="bookImg">
+                            <p th:text="${book.getTitle()}">Три товарища</p>
+                            <p th:text="${book.getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
                             </a>
-                            <div class="card-body ">
-
-                            </div>
-
                         </div>
+
 
                     </div>
 
@@ -64,11 +78,11 @@
     <div class="text-center" style="margin: 0 auto">
         <h3> Your books:</h3>
     </div>
-    <div class="jumbotron row m-0">
-        <div th:each="book : ${userBooks}" class="col-2">
-            <div class="card cardlib">
-                <img th:src="@{'/viewuserbook/'+${book.getCover()}}" class="card-img-top libimg" alt="...">
-                <div class="card-body ">
+    <div class=" row m-0">
+        <div th:each="book : ${userBooks}" class="block_exchange_book book1 col-2">
+            <div class="exchange">
+                <img th:src="@{'/viewuserbook/'+${book.getCover()}}" class=" " alt="...">
+                <div class=" ">
                     <h5 class="card-title m-0" th:text="${book.getBook().getTitle()}">Harry Potter и принц персии</h5>
                     <p class="card-text m-0" th:text="${book.getBook().getAuthor().getName()}">Some quick example </p>
                     <form th:action="@{/addbooktoexchange}" method="POST">
@@ -79,17 +93,27 @@
                 </div>
             </div>
         </div>
+
+<!--        <div th:each="book : ${currentUserBooks}" class="block_exchange_book book1 col-4">-->
+<!--            <a th:href="@{'/removebookfromexchange?id='+${book.getId()} + '&type=userBook'}">-->
+<!--                <img th:src="@{'/viewuserbook/'+${book.getCover()}}" alt="bookImg">-->
+<!--                <p th:text="${book.getBook().getTitle()}">Три товарища</p>-->
+<!--                <p th:text="${book.getBook().getAuthor().getName()}" class="font-italic">Э. Ремарк</p>-->
+<!--            </a>-->
+<!--        </div>-->
+
+
     </div>
 
 
     <div class="text-center" style="margin: 0 auto">
         <h3> Pick books that you want:</h3>
     </div>
-    <div class="container-fluid row m-0" style="background-color: beige">
-        <div th:each="book : ${books}" class="col-2">
-            <div class="card cardlib">
-                <img th:src="@{'/viewbookex/'+${book.getCover()}}" class="card-img-top libimg" alt="...">
-                <div class="card-body ">
+    <div class="container-fluid row m-0" style=" ">
+        <div th:each="book : ${books}" class="block_exchange_book book1 col-2">
+            <div class="exchange">
+                <img th:src="@{'/viewbookex/'+${book.getCover()}}" class=" " alt="...">
+                <div class="  ">
                     <h5 class="card-title m-0" th:text="${book.getTitle()}">Harry Potter и принц персии</h5>
                     <p class="card-text m-0" th:text="${book.getAuthor().getName()}">Some quick example </p>
                     <form th:action="@{/addbooktoexchange}" method="POST">
