--- a/site/src/main/resources/templates/exchangeDetails.html
+++ b/site/src/main/resources/templates/exchangeDetails.html
@@ -9,13 +9,14 @@
                 <div class="exchange">
                     <div class="row">
                         <div class="col-12 user">
+                            <div class="block_date" th:text="${exchange.getDate()}">
+                                20.10.2021
+                            </div>
                             <img th:src="@{'/viewphoto/'+${exchange.getUser().getUserAvatar()}}" alt="userLogo">
                             <p th:text="${exchange.getUser().getFullName()}">
                                 Alisher
                             </p>
-                            <div class="block_date" th:text="${exchange.getDate()}">
-                                20.10.2021
-                            </div>
+
                             <div class="block_desc" th:text="${exchange.getComment()}">
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius ea voluptates dolor quam vitae non recusandae?
                             </div>
@@ -25,16 +26,20 @@
                             <div class="block_exchange">
 
                                         <div class="col-5" >
-                                            <div class="row  m-0" style="background-color: #b4de62">
-                                                <div th:each="book : ${exchange.getUserBooks()}" class="col-4">
-                                                    <img th:src="@{'/viewuserbook/'+${book.getCover()}}"
-                                                         class="card-img-top eximg" alt="...">
-                                                    <div class="card-body ">
+                                            <div class="row  m-0" style=" ">
+<!--                                                <div th:each="book : ${exchange.getUserBooks()}" class="col-4">-->
+<!--                                                    <img th:src="@{'/viewuserbook/'+${book.getCover()}}"-->
+<!--                                                         class="card-img-top eximg" alt="...">-->
+<!--                                                    <div class="card-body ">-->
 
-                                                    </div>
+<!--                                                    </div>-->
 
+<!--                                                </div>-->
+                                                <div th:each="book : ${exchange.getUserBooks()}" class="block_exchange_book book1 col-4">
+                                                    <img th:src="@{'/viewuserbook/'+${book.getCover()}}" alt="bookImg">
+                                                    <p th:text="${book.getBook().getTitle()}">Три товарища</p>
+                                                    <p th:text="${book.getBook().getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
                                                 </div>
-
 
                                             </div>
 
@@ -46,16 +51,21 @@
                                         </div>
 
                                         <div class="col-5" >
-                                            <div class="row  m-0" style="background-color: #b4de62">
-                                                <div th:each="book : ${exchange.getBooks()}" class="col-4">
+                                            <div class="row  m-0" style="">
+<!--                                                <div th:each="book : ${exchange.getBooks()}" class="col-4">-->
 
-                                                    <img th:src="@{'/viewbookex/'+${book.getCover()}}"
-                                                         class="card-img-top eximg" alt="...">
+<!--                                                    <img th:src="@{'/viewbookex/'+${book.getCover()}}"-->
+<!--                                                         class="card-img-top eximg" alt="...">-->
 
-                                                    <div class="card-body ">
+<!--                                                    <div class="card-body ">-->
 
-                                                    </div>
+<!--                                                    </div>-->
 
+<!--                                                </div>-->
+                                                <div th:each="book : ${exchange.getBooks()}" class="block_exchange_book book1 col-4">
+                                                    <img th:src="@{'/viewbookex/'+${book.getCover()}}" alt="bookImg">
+                                                    <p th:text="${book.getTitle()}">Три товарища</p>
+                                                    <p th:text="${book.getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
                                                 </div>
 
                                             </div>
@@ -74,15 +84,16 @@
                     <div   class="row"  th:styleappend="${offer.isPicked()} ? 'background-color: darkred' : '' " >
 
                         <div class="col-12 user">
+                            <div class="block_date" th:text="${offer.getDate()}">
+                            20.10.2021
+                        </div>
                             <div class="user__logo">
                                 <img th:src="@{'/viewphoto/'+${offer.getUser().getUserAvatar()}}" alt="userLogo">
                             </div>
                             <p th:text="${offer.getUser().getFullName()}">
                             admin123
                             </p>
-                            <div class="block_date" th:text="${offer.getDate()}">
-                                20.10.2021
-                            </div>
+
                             <div class="block_desc" th:text="${offer.getComment()}">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, cum. Illum adipisci maxime aliquam cum deleniti inventore error enim id accusantium neque, quidem, voluptas recusandae eius nulla qui eaque architecto?
                             </div>
@@ -115,34 +126,58 @@
 
 
             </div>
-            <div class="row  m-0" style="background-color: #b4de62">
-                <div th:each="book : ${currentOfferBooks}" class="col-4">
-                    <a th:href="@{'/removebookfromoffer?id='+${book.getId()} + '&exchange_id=' +${exchange.getId()}}">
-                        <img th:src="@{'/viewuserbook/'+${book.getCover()}}"
-                             class="card-img-top eximg" alt="..."> </a>
-                    <div class="card-body ">
 
+
+            <div th:if="${canOffer}" class="mt-4">
+                <form method="post" th:action="@{'/postOffer'}">
+                    <button class="btn btn-dark m-3"   >+ SUBMIT +</button> <br>
+                    <input type="hidden" name="exchange_id" th:value="${exchange.getId()}">
+                    <textarea type="text" name="comment"></textarea>
+                </form>
+                <div class="exchange  row  m-0" style="">
+
+                    <!--                <div th:each="book : ${currentOfferBooks}" class="col-4">-->
+                    <!--                    <a th:href="@{'/removebookfromoffer?id='+${book.getId()} + '&exchange_id=' +${exchange.getId()}}">-->
+                    <!--                        <img th:src="@{'/viewuserbook/'+${book.getCover()}}"-->
+                    <!--                             class="card-img-top eximg" alt="..."> </a>-->
+                    <!--                    <div class="card-body ">-->
+
+                    <!--                    </div>-->
+
+                    <!--                </div>-->
+                    <!--                <div th:each="book : ${currentOfferBooks}" class="block_exchange_book book1 col-4">-->
+                    <!--                    <a th:href="@{'/removebookfromoffer?id='+${book.getId()} + '&exchange_id=' +${exchange.getId()}}">-->
+                    <!--                    <img th:src="@{'/viewuserbook/'+${book.getCover()}}" alt="bookImg">-->
+                    <!--                    <p th:text="${book.getBook().getTitle()}">Три товарища</p>-->
+                    <!--                    <p th:text="${book.getBook().getAuthor().getName()}" class="font-italic">Э. Ремарк</p>-->
+                    <!--                    </a>-->
+                    <!--                </div>-->
+                    <div class="col-12 block">
+
+                        <div class="block_exchange">
+
+                            <div th:each="userBook : ${currentOfferBooks}" class="block_exchange_book book1">
+                                <a th:href="@{'/removebookfromoffer?id='+${userBook.getId()} + '&exchange_id=' +${exchange.getId()}}">
+                                    <img th:src="@{'/viewuserbook/'+${userBook.getCover()}}" alt="bookImg">
+                                    <p th:text="${userBook.getBook().getTitle()}">Три товарища</p>
+                                    <p th:text="${userBook.getBook().getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
+                                </a>
+                            </div>
+
+
+                        </div>
                     </div>
 
                 </div>
 
-
-            </div>
-
-            <div th:if="${canOffer}">
-            <form method="post" th:action="@{'/postOffer'}">
-                <button class="btn btn-dark m-3"   >+ SUBMIT +</button> <br>
-                <input type="hidden" name="exchange_id" th:value="${exchange.getId()}">
-                <textarea type="text" name="comment"></textarea>
-            </form>
             <div class="text-center" style="margin: 0 auto">
                 <h3> Your books:</h3>
             </div>
-            <div class="jumbotron row m-0">
-                <div th:each="book : ${userBooks}" class="col-2">
-                    <div class="card cardlib">
-                        <img th:src="@{'/viewuserbook/'+${book.getCover()}}" class="card-img-top libimg" alt="...">
-                        <div class="card-body ">
+            <div class="  row m-0">
+                <div th:each="book : ${userBooks}" class="block_exchange_book book1 col-2">
+                    <div class="exchange">
+                        <img th:src="@{'/viewuserbook/'+${book.getCover()}}" class="" alt="...">
+                        <div class=" ">
                             <h5 class="card-title m-0" th:text="${book.getBook().getTitle()}">Harry Potter и принц персии</h5>
                             <p class="card-text m-0" th:text="${book.getBook().getAuthor().getName()}">Some quick example </p>
                             <form th:action="@{/addbooktooffer}" method="POST">
