--- a/site/src/main/resources/templates/exchanges.html
+++ b/site/src/main/resources/templates/exchanges.html
@@ -9,19 +9,23 @@
     <div class="   m-0 " style="margin: 0 auto" >
 
 
-        <div th:each="exchange : ${exchangesOpen}" class=" " style="margin-bottom: 3em !important; background-color: greenyellow">
+        <div th:each="exchange : ${exchangesOpen}" class="exchange" >
             <a  class="row  m-0" th:href="@{'/exchangeDetails/'+${exchange.getId()}}" style="width: 100% !important;">
             <div class="col-5" >
-                <div class="row  m-0" style="background-color: #b4de62">
-                    <div th:each="book : ${exchange.getUserBooks()}" class="col-4">
-                            <img th:src="@{'/viewuserbook/'+${book.getCover()}}"
-                                 class="card-img-top eximg" alt="...">
-                        <div class="card-body ">
+                <div class="row  m-0" style="">
+<!--                    <div th:each="book : ${exchange.getUserBooks()}" class="col-4">-->
+<!--                            <img th:src="@{'/viewuserbook/'+${book.getCover()}}"-->
+<!--                                 class="card-img-top eximg" alt="...">-->
+<!--                        <div class="card-body ">-->
 
-                        </div>
+<!--                        </div>-->
 
+<!--                    </div>-->
+                    <div th:each="book : ${exchange.getUserBooks()}" class="block_exchange_book book1 col-4">
+                        <img th:src="@{'/viewuserbook/'+${book.getCover()}}" alt="bookImg">
+                        <p th:text="${book.getBook().getTitle()}">Три товарища</p>
+                        <p th:text="${book.getBook().getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
                     </div>
-
 
                 </div>
 
@@ -33,18 +37,22 @@
             </div>
 
             <div class="col-5" >
-                <div class="row  m-0" style="background-color: #b4de62">
-                    <div th:each="book : ${exchange.getBooks()}" class="col-4">
+                <div class="row  m-0" style=" ">
+<!--                    <div th:each="book : ${exchange.getBooks()}" class="col-4">-->
 
-                            <img th:src="@{'/viewbookex/'+${book.getCover()}}"
-                                 class="card-img-top eximg" alt="...">
+<!--                            <img th:src="@{'/viewbookex/'+${book.getCover()}}"-->
+<!--                                 class="card-img-top eximg" alt="...">-->
 
-                        <div class="card-body ">
+<!--                        <div class="card-body ">-->
 
-                        </div>
+<!--                        </div>-->
 
+<!--                    </div>-->
+                    <div th:each="book : ${exchange.getBooks()}" class="block_exchange_book book1 col-4">
+                        <img th:src="@{'/viewbookex/'+${book.getCover()}}" alt="bookImg">
+                        <p th:text="${book.getTitle()}">Три товарища</p>
+                        <p th:text="${book.getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
                     </div>
-
                 </div>
 
 
@@ -53,19 +61,23 @@
         </div>
 
 
-        <div th:each="exchange : ${exchangesFreeze}" class=" " style="margin-bottom: 3em !important; background-color: aqua">
+        <div th:each="exchange : ${exchangesFreeze}" class="exchange" style="background-color: darkblue">
             <a  class="row  m-0" th:href="@{'/exchangeDetails/'+${exchange.getId()}}" style="width: 100% !important;">
                 <div class="col-5" >
-                    <div class="row  m-0" style="background-color: #b4de62">
-                        <div th:each="book : ${exchange.getUserBooks()}" class="col-4">
-                            <img th:src="@{'/viewuserbook/'+${book.getCover()}}"
-                                 class="card-img-top eximg" alt="...">
-                            <div class="card-body ">
+                    <div class="row  m-0" style="">
+                        <!--                    <div th:each="book : ${exchange.getUserBooks()}" class="col-4">-->
+                        <!--                            <img th:src="@{'/viewuserbook/'+${book.getCover()}}"-->
+                        <!--                                 class="card-img-top eximg" alt="...">-->
+                        <!--                        <div class="card-body ">-->
 
-                            </div>
+                        <!--                        </div>-->
 
+                        <!--                    </div>-->
+                        <div th:each="book : ${exchange.getUserBooks()}" class="block_exchange_book book1 col-4">
+                            <img th:src="@{'/viewuserbook/'+${book.getCover()}}" alt="bookImg">
+                            <p th:text="${book.getBook().getTitle()}">Три товарища</p>
+                            <p th:text="${book.getBook().getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
                         </div>
-
 
                     </div>
 
@@ -77,24 +89,30 @@
                 </div>
 
                 <div class="col-5" >
-                    <div class="row  m-0" style="background-color: #b4de62">
-                        <div th:each="book : ${exchange.getBooks()}" class="col-4">
+                    <div class="row  m-0" style=" ">
+                        <!--                    <div th:each="book : ${exchange.getBooks()}" class="col-4">-->
 
-                            <img th:src="@{'/viewbookex/'+${book.getCover()}}"
-                                 class="card-img-top eximg" alt="...">
+                        <!--                            <img th:src="@{'/viewbookex/'+${book.getCover()}}"-->
+                        <!--                                 class="card-img-top eximg" alt="...">-->
 
-                            <div class="card-body ">
+                        <!--                        <div class="card-body ">-->
 
-                            </div>
+                        <!--                        </div>-->
 
+                        <!--                    </div>-->
+                        <div th:each="book : ${exchange.getBooks()}" class="block_exchange_book book1 col-4">
+                            <img th:src="@{'/viewbookex/'+${book.getCover()}}" alt="bookImg">
+                            <p th:text="${book.getTitle()}">Три товарища</p>
+                            <p th:text="${book.getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
                         </div>
-
                     </div>
 
 
                 </div>
             </a>
         </div>
+
+
     </div>
 
 
