--- a/site/src/main/resources/templates/chat.html
+++ b/site/src/main/resources/templates/chat.html
@@ -1,40 +1,108 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <title>Spring Boot WebSocket</title>
-  <link rel="stylesheet" th:href="@{/css/main.css}" />
 
+
+<html   xmlns:th = "http://www.thymeleaf.org" xmlns:layout = "http://ultraq.net.nz/thymeleaf/layout" layout:decorate = "layout/loginLayout.html" >
+
+<div layout:fragment="site_content" class="container-fluid libcontainer m-0" >
+
+  <body >
+  <div class="container" style="margin-top: 50px">
+    <div class="row">
+      <div class="col-md-12">
+
+      </div>
+    </div>
+    <div class="row" style="margin-top: 10px;">
+
+    </div>
+    <div class="row">
+      <div class="col-md-12" style=" text-align: start !important" >
+
+        <div class="text-center">
+        Chat with  <div class="user__logo">
+        <img th:src="@{'/viewphoto/'+${chatWith.getUserAvatar()}}" alt="userLogo" class="swap">
+      </div>
+        <p th:text="${chatWith.getFullName()}">
+          admin123
+        </p>
+        </div>
+
+        <div id="message-history" class="table table-striped">
+          <div>
+          <tr>
+            <th>Messages
+              <span
+                      id="notifications"
+                      style="
+                                    color: white;
+                                    background-color: red;
+                                    padding-left: 15px;
+                                    padding-right: 15px;">
+                            </span>
+            </th>
+          </tr>
+          </div>
+          <div id="messages" style="height: 300px ; overflow: scroll">
+          <div th:each="msg : ${messages}" class=" ">
+
+            <div th:if="${me.equals(msg.getUserOne().getEmail()) && !msg.getContent().contains('Your opponent canceled offer') && !msg.getContent().contains('Your opponent confirms exchange.')}" style="background-color: #b4de62 ; width: 35%" class="ml-auto  p-3 m-2 rounded">
+
+              <p style=""   th:text="${msg.getContent()}"> </p>
+
+            </div>
+
+            <div th:unless="${me.equals(msg.getUserOne().getEmail())}" style="background-color: white">
+
+              <b style="" th:if="${msg.getContent().contains('Your opponent canceled offer')}" class="text-danger" th:text="'Your opponent canceled offer'" > </b>
+              <b style="" th:if="${msg.getContent().contains('Your opponent confirms exchange.')}" class="text-success" th:text="'Your opponent confirms exchange. Was the exchange successful? Confirm or cancel'" > </b>
+
+
+              <p style="" th:if="${!msg.getContent().contains('Your opponent canceled offer') && !msg.getContent().contains('Your opponent confirms exchange.')} "  th:text="${msg.getContent()}"> </p>
+            </div>
+
+
+          </div>
+          </div>
+        </div>
+
+        <div class="col-md-12">
+          <div class="form-inline">
+            <div class="">
+              <input type="text" id="private-message" class="" placeholder="Enter your message here...">
+              <input type="hidden" id="opponent" th:value="${opponent}" class="" placeholder="Enter your message here...">
+              <input type="hidden" id="exchange_id" th:value="${exchangeId}" class="" placeholder="Enter your message here...">
+              <input type="hidden" id="me" th:value="${me}" class="" placeholder="Enter your message here...">
+            </div>
+            <button id="send-private" class="btn btn-default" type="button">Send</button>
+          </div>
+        </div>
+
+        <form method="post" th:action="@{'/cancelOffer'}">
+          <button class="btn btn-danger  m-3"  id="cancel" >CANCEL OFFER</button> <br>
+          <input type="hidden" name="offer_id" th:value="${offerId}">
+          <input type="hidden" name="exchange_id" th:value="${exchangeId}">
+        </form>
+
+        <b th:if="${confirmed == true}" class="text-success">You confirmed this exchange, wait your opponent to confirm</b>
+        <form th:if="${confirmed == false}" method="post" th:action="@{'/confirmExchange'}">
+          <button class="btn btn-success m-3"  id="confirm" >CONFIRM EXCHANGE</button> <br>
+          <input type="hidden" name="offer_id" th:value="${offerId}">
+          <input type="hidden" name="exchange_id" th:value="${exchangeId}">
+        </form>
+
+
+
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <!-- https://cdnjs.com/libraries/sockjs-client -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
   <!-- https://cdnjs.com/libraries/stomp.js/ -->
   <script  src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <script src="/js/main.js"></script>
 
-</head>
-<body>
-<div id="chat-container">
-  <div class="chat-header">
-    <div class="user-container">
-      <span id="username" th:utext="${username}"></span>
-      <a th:href="@{/logout}">Logout</a>
-    </div>
-    <h3>Spring WebSocket Chat Demo</h3>
-  </div>
-
-  <hr/>
-
-  <div id="connecting">Connecting...</div>
-  <ul id="messageArea">
-  </ul>
-  <form id="messageForm" name="messageForm">
-    <div class="input-message">
-      <input type="text" id="message" autocomplete="off"
-             placeholder="Type a message..."/>
-      <button type="submit">Send</button>
-    </div>
-  </form>
+  </body>
 </div>
-
-<script th:src="@{/js/main.js}"></script>
-
-</body>
-</html>
+  </html>
