--- a/site/src/main/resources/templates/profile.html
+++ b/site/src/main/resources/templates/profile.html
@@ -59,7 +59,7 @@
     I Approved
     <div th:each="offer : ${iApproved}" class="exchange">
 
-        <a  class="row  m-0" th:href="@{'/exchangeDetails/'+${offer.getExchange().getId()}}" style="width: 100% !important;">
+        <a  class="row  m-0" th:href="@{'/chat?opponent='+${offer.getUser().getEmail()} + '&exchange_id=' + ${offer.getExchange().getId()} + '&offer_id=' + ${offer.getId()}} " style="width: 100% !important;">
             <div class="col-5" >
                 <div class="user__logo">
                     <img th:src="@{'/viewphoto/'+${offer.getExchange().getUser().getUserAvatar()}}" alt="userLogo" class="swap">
@@ -69,7 +69,7 @@
                 </p>
                 <div class="row  m-0" style="">
                     <div th:each="book : ${offer.getExchange().getUserBooks()}" class="block_exchange_book book1 col-4">
-                        <img th:src="@{'/viewbookex/'+${book.getCover()}}" alt="bookImg">
+                        <img th:src="@{'/viewuserbook/'+${book.getCover()}}" alt="bookImg">
                         <p th:text="${book.getBook().getTitle()}">Три товарища</p>
                         <p th:text="${book.getBook().getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
                     </div>
@@ -106,7 +106,7 @@
     Меня апрувнули
     <div th:each="offer : ${myApproved}" class="exchange">
 
-        <a  class="row  m-0" th:href="@{'/exchangeDetails/'+${offer.getExchange().getId()}}" style="width: 100% !important;">
+        <a  class="row  m-0" th:href="@{'/chat?opponent='+${offer.getExchange().getUser().getEmail()} + '&exchange_id=' + ${offer.getExchange().getId()} + '&offer_id=' + ${offer.getId()} }"  style="width: 100% !important;">
 
 
             <div class="col-5" >
@@ -140,7 +140,7 @@
                 </p>
                 <div class="row  m-0" style="">
                     <div th:each="book : ${offer.getExchange().getUserBooks()}" class="block_exchange_book book1 col-4">
-                        <img th:src="@{'/viewbookex/'+${book.getCover()}}" alt="bookImg"  >
+                        <img th:src="@{'/viewuserbook/'+${book.getCover()}}" alt="bookImg"  >
                         <p th:text="${book.getBook().getTitle()}">Три товарища</p>
                         <p th:text="${book.getBook().getAuthor().getName()}" class="font-italic">Э. Ремарк</p>
                     </div>
