SR-25: release 0.2 поиск+

--- a/site/src/main/resources/templates/layout/loginLayout.html
+++ b/site/src/main/resources/templates/layout/loginLayout.html
@@ -60,7 +60,7 @@
     <form th:action="@{'/logout'}" method="post" id="logoutForm" sec:authorize="isAuthenticated()"></form>
     <div class="m-0 text-center container-fluid" style="margin: 0 auto">
 
-    <div layout:fragment="site_content" class="  container" ></div>
+    <div layout:fragment="site_content" class="  container-fluid" ></div>
 
 
     </div>
