--- a/site/src/main/resources/templates/exchangeDetails.html
+++ b/site/src/main/resources/templates/exchangeDetails.html
@@ -173,6 +173,12 @@
             <div class="text-center" style="margin: 0 auto">
                 <h3> Your books:</h3>
             </div>
+                <form method="get" th:action="@{'#pickUserBooks'}"  class="mt-3" id="pickUserBooks">
+                    <div class="row pl-4">
+                        <input type="text" class="form-control col-11 shadow " name="searchUserStr" >
+                        <button class="btn btn-info col-1 shadow"style="position: relative; right: 20px" >Search</button>
+                    </div>
+                </form>
             <div class="  row m-0">
                 <div th:each="book : ${userBooks}" class="block_exchange_book book1 col-2">
                     <div class="exchange">
